--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url /parcel-deploy-tutorial/",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build" 
   },
   "repository": {
     "type": "git",
@@ -17,11 +19,13 @@
   "bugs": {
     "url": "https://github.com/Kovganna/goit-js-hw-09-node/issues"
   },
-  "homepage": "https://github.com/Kovganna/goit-js-hw-09-node#readme",
+  "homepage": "https://Kovganna.github.io/goit-js-hw-09-node",
   "dependencies": {
     "express": "^4.17.1",
+    "gh-pages": "^3.2.3",
     "isurl": "^4.0.2",
     "joi": "^17.4.2",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
